<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.game.em.englishmaster.HowToActivity">

    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:weightSum="10">

        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:layout_weight="2">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title" android:textSize="35dp"/>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:gravity="center">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/howTo" android:textSize="40dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:layout_weight="8" android:weightSum="8" android:gravity="bottom">
            <Button android:id="@+id/back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/back" android:onClick="mOnClick"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
