<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="English Master"
               android:textSize="30dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="70dp"></LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:gravity="center">
            <Button android:id="@+id/start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start" android:onClick="mOnClick"/>
            <Button android:id="@+id/viewRecord" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/viewRec" android:onClick="mOnClick"/>
            <Button android:id="@+id/howTo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/howTo" android:onClick="mOnClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="70dp"></LinearLayout>
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>
